unpackaged/main/default/objects/Account/fields/Account_AOV__c.field-meta.xml
<CustomField>
    <fullName>Account_AOV__c</fullName>
    <formula>if( Number_Orders__c =0,0, Lifetime_Spend__c / Number_Orders__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account AOV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>