unpackaged/main/default/objects/Account/fields/Account_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Type__c</fullName>
    <description>What business unit: The Account types belong to.</description>
    <label>Account Owner Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDR</fullName>
                <default>true</default>
                <label>BDR</label>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>