unpackaged/main/default/objects/Account/fields/Account_Retention_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Account_Retention_Countdown__c</fullName>
    <description>Calculates time to retention for BDRs</description>
    <formula>IF(ISPICKVAL(Account_Owner_Type__c,"BDR"),(Date_of_First_Order__c+90)-TODAY(),null)</formula>
    <label>Account Retention Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>