unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF( NOT(ISBLANK( Date_of_First_Order__c )) ,'Customer Account', IF(NOT(ISBLANK( Date_of_First_Quote__c )), 'Quoter Account', 'Contact Account'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[decommissioned] Account Status</label>
    <type>Text</type>
</CustomField>