unpackaged/main/default/objects/Account/fields/Account_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Members__c</fullName>
    <label>Account Team Members</label>
    <summaryForeignKey>Account_Team__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>