unpackaged/main/default/objects/Account/fields/AccountHierarchyTarget2023__c.field-meta.xml
<CustomField>
    <fullName>AccountHierarchyTarget2023__c</fullName>
    <description>Check Both Parent and Child</description>
    <formula>if(OR(Target_Account_2023__c,ParentTarget2023__c),true,false)</formula>
    <inlineHelpText>Target 2023 for Reporting and Automaton.</inlineHelpText>
    <label>Account Hierarchy Target 2023</label>
    <type>Checkbox</type>
</CustomField>