unpackaged/main/default/objects/Account/fields/Annual_Revenue_Corp_Level__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Corp_Level__c</fullName>
    <formula>if( ispickval(Hierarchy_Type__c , "Account Subdivision"), Parent.AnnualRevenue , AnnualRevenue )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revenue (Corp Level)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>