unpackaged/main/default/objects/Account/fields/Batch_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Batch_Reassign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Reassign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Batch</relationshipName>
    <type>Lookup</type>
</CustomField>