unpackaged/main/default/objects/Account/fields/BDR_Countdown_Timer__c.field-meta.xml
<CustomField>
    <fullName>BDR_Countdown_Timer__c</fullName>
    <description>Countdown timer for BDR once first order is placed.</description>
    <formula>IF( ISPICKVAL(Account_Owner_Type__c,'BDR'),
IF(  !ISBLANK(Date_of_First_Order__c), TEXT(DATE(YEAR(Date_of_First_Order__c), MONTH(Date_of_First_Order__c)+2, DAY(Date_of_First_Order__c)  ) -  TODAY()), 'NA'),
IF( ISPICKVAL(Account_Owner_Type__c,'AR'),
IF( !ISBLANK(Date_of_First_Order__c), TEXT(DATE(YEAR(Date_of_First_Order__c)+1, MONTH(Date_of_First_Order__c)+2, DAY(Date_of_First_Order__c)  ) -  TODAY()), 'NA'),
'NA'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Countdown Timer(Days)</label>
    <type>Text</type>
</CustomField>