unpackaged/main/default/objects/Account/fields/BDR_Retention_Countdown_Calculation__c.field-meta.xml
<CustomField>
    <fullName>BDR_Retention_Countdown_Calculation__c</fullName>
    <formula>IF( and(ISPICKVAL(Account_Owner_Type__c,'BDR'),!ISBLANK(Date_of_First_Order__c)),
90-(today()-Date_of_First_Order__c),1234)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[DNU]BDR Retention Countdown Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>