unpackaged/main/default/objects/Account/fields/Billing_Account_ERP__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_ERP__c</fullName>
    <formula>IF( NOT(ISBLANK(Email_Domain__c)) ,HYPERLINK("https://erp.xometry.com/billing-accounts?search=" + Email_Domain__c, "Go to Billing Account in the ERP","_blank"), "No Email Domain Provided for This Account")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account ERP</label>
    <type>Text</type>
</CustomField>