unpackaged/main/default/objects/Account/fields/Campaign_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Campaign_List_Notes__c</fullName>
    <inlineHelpText>Information about a list and/or campaign provided by sales or marketing leadership. Related to the Account/Company.</inlineHelpText>
    <label>Campaign/List Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>