unpackaged/main/default/objects/Account/fields/Clearbit_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Time_Zone__c</fullName>
    <description>IANA time zone of company headquarters (ex: America/New_York)</description>
    <inlineHelpText>IANA time zone of company headquarters (ex: America/New_York)</inlineHelpText>
    <label>[decommissioned] Clearbit Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>