unpackaged/main/default/objects/Account/fields/Company_Category_Corp_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Category_Corp_Level__c</fullName>
    <formula>if (ispickval(  Hierarchy_Type__c , "Account Subdivision"),  Parent.Company_Category__c ,  Company_Category__c )</formula>
    <label>Company Category (Corp Level)</label>
    <type>Text</type>
</CustomField>