unpackaged/main/default/objects/Account/fields/Contact_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Contact_Conversion__c</fullName>
    <formula>Number_Quoters__c /  Number_Contacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Conversion</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>