unpackaged/main/default/objects/Account/fields/Corporate_Hierarchy_Lifetime_N_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Hierarchy_Lifetime_N_of_Orders__c</fullName>
    <label>Corporate Hierarchy Lifetime # of Orders</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>