unpackaged/main/default/objects/Account/fields/Corporate_Hierarchy_Lifetime_Spend__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Hierarchy_Lifetime_Spend__c</fullName>
    <label>Corporate Hierarchy Lifetime Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>