unpackaged/main/default/objects/Account/fields/Corporate_Hierarchy_Pacing_Stat__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Hierarchy_Pacing_Stat__c</fullName>
    <formula>if(
X2019_Corporate_Hierarchy_Spend__c = 0,null,

if(isblank(X2019_Corporate_Hierarchy_Spend__c),null,


(  X2020_Corporate_Hierarchy_Spend__c /
(
(1-
(
(date
(2020,12,31
)-today()
)/365
)
)* X2019_Corporate_Hierarchy_Spend__c
)
)-1
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[dnu] Corporate Hierarchy Pacing Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>