unpackaged/main/default/objects/Account/fields/Credit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Approved?</label>
    <type>Checkbox</type>
</CustomField>