unpackaged/main/default/objects/Account/fields/Credit_Available_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available_c__c</fullName>
    <label>Credit Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>