unpackaged/main/default/objects/Account/fields/CSA_Target_Master__c.field-meta.xml
<CustomField>
    <fullName>CSA_Target_Master__c</fullName>
    <formula>if(ispickval(Hierarchy_Type__c,"Account Subdivision"), Parent.GAM_Target__c, GAM_Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSA Target Master</label>
    <type>Checkbox</type>
</CustomField>