unpackaged/main/default/objects/Account/fields/CY_Projected_Spend__c.field-meta.xml
<CustomField>
    <fullName>CY_Projected_Spend__c</fullName>
    <formula>This_Year_Account_Spend__c  / (today()-date(year(today())-1,12,31)) * 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected This Year Account Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>