unpackaged/main/default/objects/Account/fields/D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S_Number__c</fullName>
    <label>D-U-N-S Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>