unpackaged/main/default/objects/Account/fields/Date_of_First_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Order__c</fullName>
    <description>This field is the date of First Order on Account. Used to populate a countdown timer for  BDRs and as a reference.</description>
    <label>Date of First Order</label>
    <type>Date</type>
</CustomField>