unpackaged/main/default/objects/Account/fields/Date_of_First_Quote__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Quote__c</fullName>
    <label>Date of First Quote</label>
    <type>Date</type>
</CustomField>