unpackaged/main/default/objects/Account/fields/DefaultPartnerGroupPSESegmentation__c.field-meta.xml
<CustomField>
    <fullName>DefaultPartnerGroupPSESegmentation__c</fullName>
    <description>This is used for Segment PSE Cases.</description>
    <inlineHelpText>This is used for Segment PSE Cases.</inlineHelpText>
    <label>Default Partner Group (PSE Segmentation)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China Group</fullName>
            </value>
            <value>
                <fullName>Ultra Premium Group</fullName>
            </value>
            <value>
                <fullName>Premium Group</fullName>
            </value>
            <value>
                <fullName>Default Group</fullName>
            </value>
            <value>
                <fullName>Mexico and Canada Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>