unpackaged/main/default/objects/Account/fields/DnB_Connect_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DnB_Connect_DUNS__c</fullName>
    <description>Custom DUNS field created for D&amp;B Connect Setup/Testing. Replace Field with final version.</description>
    <label>D&amp;B Connect DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>