unpackaged/main/default/objects/Account/fields/dnb_Global_Ultimate_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>dnb_Global_Ultimate_Business_Name__c</fullName>
    <description>Global Ultimate Business Name from DnB Connect</description>
    <label>Global Ultimate Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>