unpackaged/main/default/objects/Account/fields/dnb_Global_Ultimate_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>dnb_Global_Ultimate_D_U_N_S_Number__c</fullName>
    <description>Global Ultimate D-U-N-S Number from DnB Connect</description>
    <label>Global Ultimate D-U-N-S Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>