unpackaged/main/default/objects/Account/fields/dnb_Headquarter_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>dnb_Headquarter_Business_Name__c</fullName>
    <description>Headquarter Business Name from Dnb Connect for Traction Hierarchies</description>
    <label>Headquarter Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>