unpackaged/main/default/objects/Account/fields/dnb_naics2_1_code__c.field-meta.xml
<CustomField>
    <fullName>dnb_naics2_1_code__c</fullName>
    <label>[decommisisoned] dnb_naics2_1_code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>