unpackaged/main/default/objects/Account/fields/dnb_Parent_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>dnb_Parent_Business_Name__c</fullName>
    <description>Parent Business Name from DnB Connect for Traction Hierarchies</description>
    <label>Parent Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>