unpackaged/main/default/objects/Account/fields/dnb_Parent_D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>dnb_Parent_D_U_N_S_Number__c</fullName>
    <description>Parent D-U-N-S Number from Dnb Connect for Traction Hierarchies</description>
    <label>Parent D-U-N-S Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>