unpackaged/main/default/objects/Account/fields/dnb_primary_naics_1_1__c.field-meta.xml
<CustomField>
    <fullName>dnb_primary_naics_1_1__c</fullName>
    <label>[decommisisoned] dnb primary naics 1_1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>