unpackaged/main/default/objects/Account/fields/donotusre_Generic__c.field-meta.xml
<CustomField>
    <fullName>donotusre_Generic__c</fullName>
    <formula>if( Generic_Account__c, "Generic","Company")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[donotuse] Generic</label>
    <type>Text</type>
</CustomField>