unpackaged/main/default/objects/Account/fields/Drift_Domain__c.field-meta.xml
<CustomField>
    <fullName>Drift_Domain__c</fullName>
    <label>Drift Domain</label>
    <type>Url</type>
</CustomField>