unpackaged/main/default/objects/Account/fields/Employee_Total__c.field-meta.xml
<CustomField>
    <fullName>Employee_Total__c</fullName>
    <description>All Locations within Corporate Hierarchy</description>
    <inlineHelpText>All Locations within Corporate Hierarchy</inlineHelpText>
    <label>Employee Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>