unpackaged/main/default/objects/Account/fields/ERP_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Address__c</fullName>
    <label>ERP Billing Address</label>
    <type>TextArea</type>
</CustomField>