unpackaged/main/default/objects/Account/fields/ERP_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_City__c</fullName>
    <label>ERP Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>