unpackaged/main/default/objects/Account/fields/ERP_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Country__c</fullName>
    <label>ERP Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>