unpackaged/main/default/objects/Account/fields/ERP_Billing_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_State_or_Province__c</fullName>
    <label>ERP Billing State or Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_or_Province</valueSetName>
    </valueSet>
</CustomField>