unpackaged/main/default/objects/Account/fields/ERP_Company_Quotes__c.field-meta.xml
<CustomField>
    <fullName>ERP_Company_Quotes__c</fullName>
    <formula>IF( NOT(ISBLANK(Email_Domain__c)) , HYPERLINK("https://www.xometry.com/staff/quotes-list/?search="+ Email_Domain__c +"&amp;rowsPerPage=25&amp;page=1&amp;sortBy=last_updated&amp;sortDirection=desc","Go to this Account's Quotes in the ERP", "_blank"), "No Email Domain Provided for This Account")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Company Quotes</label>
    <type>Text</type>
</CustomField>