unpackaged/main/default/objects/Account/fields/ERP_Company_Quotes_Orders__c.field-meta.xml
<CustomField>
    <fullName>ERP_Company_Quotes_Orders__c</fullName>
    <formula>IF( NOT(ISBLANK(Email_Domain__c)) , HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+ Email_Domain__c +"&amp;n_columns=20","Go to this Account in the ERP", "_blank"), "No Email Domain Provided for This Account")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[dnu] ERP Company Quotes/Orders</label>
    <type>Text</type>
</CustomField>