unpackaged/main/default/objects/Account/fields/ERP_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_City__c</fullName>
    <label>ERP Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>