unpackaged/main/default/objects/Account/fields/ERP_Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_Zip_Code__c</fullName>
    <label>ERP Shipping Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>