unpackaged/main/default/objects/Account/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <description>Our proprietary estimated annual revenue range for company</description>
    <inlineHelpText>Our proprietary estimated annual revenue range for company</inlineHelpText>
    <label>[dnu] Estimated Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estimated_Annual_Revenue</valueSetName>
    </valueSet>
</CustomField>