unpackaged/main/default/objects/Account/fields/EUD_EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>EUD_EmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send automated emails about missing End Use Data to any contacts from this account</description>
    <label>EUD Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>