unpackaged/main/default/objects/Account/fields/First_Opportunity_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity_Won_Date__c</fullName>
    <label>First Opportunity Won Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>