unpackaged/main/default/objects/Account/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <description>Month that the company's fiscal year ends (listed as integer 1-12)</description>
    <inlineHelpText>Month that the company's fiscal year ends (listed as integer 1-12)</inlineHelpText>
    <label>Fiscal Year End</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>