unpackaged/main/default/objects/Account/fields/Fortune_1000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_1000_Rank__c</fullName>
    <label>Fortune 1000 Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>