unpackaged/main/default/objects/Account/fields/GAM_Target__c.field-meta.xml
<CustomField>
    <fullName>GAM_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag of target account for CSA/Enterprise</description>
    <inlineHelpText>Flag of target account for CSA/Enterprise</inlineHelpText>
    <label>CSA Target</label>
    <type>Checkbox</type>
</CustomField>