unpackaged/main/default/objects/Account/fields/Generic_Account__c.field-meta.xml
<CustomField>
    <fullName>Generic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Account</label>
    <type>Checkbox</type>
</CustomField>