unpackaged/main/default/objects/Account/fields/Generic_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Generic_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this record went through the Generic Round Robin for BDRs</description>
    <label>Generic BDR - RR</label>
    <type>Checkbox</type>
</CustomField>