unpackaged/main/default/objects/Account/fields/Global_Ultimate_Parent_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Parent_Mismatch__c</fullName>
    <formula>IF( Native_Global_Ultimate_Parent_Id__c =  TracHier__DUNS_Global_Ultimate_Parent__r.Id , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Ultimate Parent Mismatch</label>
    <type>Checkbox</type>
</CustomField>