unpackaged/main/default/objects/Account/fields/Group_Account_Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Group_Account_Target_Role__c</fullName>
    <formula>if( ispickval(Hierarchy_Type__c,"Account Subdivision"), Parent.Target_Role__c , Target_Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[dnu] Group Account Target Role</label>
    <type>Text</type>
</CustomField>