unpackaged/main/default/objects/Account/fields/Grouping_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Account_Name__c</fullName>
    <formula>if( ispickval(Hierarchy_Type__c,"Account Subdivision"), Parent.Name , Name )</formula>
    <label>Grouping Account Name</label>
    <type>Text</type>
</CustomField>