unpackaged/main/default/objects/Account/fields/Has_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered__c</fullName>
    <formula>NOT(
isblank(
 Date_of_First_Order__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Ordered?</label>
    <type>Checkbox</type>
</CustomField>