unpackaged/main/default/objects/Account/fields/has_ordered_Carbon__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Carbon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Carbon</label>
    <type>Checkbox</type>
</CustomField>