unpackaged/main/default/objects/Account/fields/has_ordered_Direct_Sourced__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Direct_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Direct Sourced</label>
    <type>Checkbox</type>
</CustomField>