unpackaged/main/default/objects/Account/fields/has_ordered_Sheet_metal__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Sheet_metal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Sheet Metal</label>
    <type>Checkbox</type>
</CustomField>