unpackaged/main/default/objects/Account/fields/has_ordered_Stamping__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Stamping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Stamping</label>
    <type>Checkbox</type>
</CustomField>