unpackaged/main/default/objects/Account/fields/has_quoted_BinderJetting__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_BinderJetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Binder Jetting</label>
    <type>Checkbox</type>
</CustomField>