unpackaged/main/default/objects/Account/fields/has_quoted_CNC_Machining__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_CNC_Machining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: CNC Machining</label>
    <type>Checkbox</type>
</CustomField>