unpackaged/main/default/objects/Account/fields/has_quoted_Die_Casting__c.field-meta.xml
<CustomField>
    <fullName>has_quoted_Die_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quoted: Die Casting</label>
    <type>Checkbox</type>
</CustomField>