unpackaged/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <label>Health Score</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>