unpackaged/main/default/objects/Account/fields/Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Type__c</fullName>
    <description>Picklist for dropdown options for the account hierarchy.</description>
    <label>Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Subdivision</fullName>
            </value>
            <value>
                <fullName>Corporate Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>