unpackaged/main/default/objects/Account/fields/High_Potential_2023__c.field-meta.xml
<CustomField>
    <fullName>High_Potential_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Potential 2023</label>
    <type>Checkbox</type>
</CustomField>