unpackaged/main/default/objects/Account/fields/House_Retainer__c.field-meta.xml
<CustomField>
    <fullName>House_Retainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Retainer</label>
    <type>Checkbox</type>
</CustomField>