unpackaged/main/default/objects/Account/fields/HS_Company_Link__c.field-meta.xml
<CustomField>
    <fullName>HS_Company_Link__c</fullName>
    <formula>IF( NOT(ISBLANK( hubspot_companyid_mvp_load_c__c )) , HYPERLINK("https://app.hubspot.com/contacts/340051/company/"+ hubspot_companyid_mvp_load_c__c,"Go to this Company in Hubspot", "_blank"), "No Hubspot Company from MVP Load")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Company Link</label>
    <type>Text</type>
</CustomField>