unpackaged/main/default/objects/Account/fields/hubspot_companyid_mvp_load_c__c.field-meta.xml
<CustomField>
    <fullName>hubspot_companyid_mvp_load_c__c</fullName>
    <description>Link back to CompanyID in Hubspot</description>
    <externalId>true</externalId>
    <inlineHelpText>Hubspot's ID for the Company. Used during initial data load.</inlineHelpText>
    <label>HS Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>